; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config_parse.c_skip_bom.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config_parse.c_skip_bom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@GIT_BOM_UTF8 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @skip_bom to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skip_bom(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @GIT_BUF_INIT_CONST(i32 %8, i32 %11)
  store i32 %12, i32* %3, align 4
  %13 = call i32 @git_buf_text_detect_bom(i64* %4, i32* %3)
  store i32 %13, i32* %5, align 4
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* @GIT_BOM_UTF8, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %1
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @git_parse_advance_chars(%struct.TYPE_4__* %18, i32 %19)
  br label %21

21:                                               ; preds = %17, %1
  ret i32 0
}

declare dso_local i32 @GIT_BUF_INIT_CONST(i32, i32) #1

declare dso_local i32 @git_buf_text_detect_bom(i64*, i32*) #1

declare dso_local i32 @git_parse_advance_chars(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
